--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="./web/intro.html">介绍</a></li>
 								<li><a href="./web/work.html">工作</a></li>
 								<li><a href="./web/about.html">关于</a></li>
-								<li><a href="./web/contact.html">接触</a></li>
+								<li><a href="https://www.cnblogs.com/xiaoxu137/">博客</a></li>
 							</ul>
 						</nav>
 					</header>
